nueva paleta, inicio al nav, form iframe, gradients, animates, parallax background

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -5,6 +5,14 @@
     font-family: 'Sora', sans-serif;
 }
 
+body {
+    background-image: url(/img/mc_background.jpg);
+    height: 100%;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 /* mobile first */
 
 .header {
@@ -13,7 +21,8 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    background-color: #406882;
+    background: rgb(255,199,199);
+    background: radial-gradient(circle, rgba(255,199,199,0.9) 0%, rgba(135,133,162,0.9) 100%); 
 }
 
 /* nav */
@@ -25,20 +34,20 @@ ul{
 
 li{
     list-style: none;
-    margin: 1rem;
+    margin: 2rem;
 }
 
 li a{
     color: black;
     text-decoration: none;
-    background-color: #6998AB;
+    background-color: #8785A2;
     border-radius: 1rem;
-    padding: 0.2rem;
+    padding: 0.5rem;
     font-size: large;
 }
 
 li a:hover{
-    color: white;
+    color: #FFC7C7;
 }
 
 /* finaliza nav */
@@ -48,12 +57,14 @@ li a:hover{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #1A374D;
+    background: rgb(255,199,199);
+    background: radial-gradient(circle, rgba(255,199,199,0.9) 0%, rgba(135,133,162,0.9) 100%); 
 }
 
 .footer {
     grid-area: footer; 
-    background-color: #1A374D;
+    background: rgb(255,199,199);
+    background: linear-gradient(180deg, rgba(255,199,199,1) 0%, rgba(135,133,162,0.9) 22%); 
     padding:2rem;
 }
 
@@ -90,15 +101,12 @@ footer p{
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    background-image: url(../img/mc_background.jpg);
-    background-position: center;
-    background-size: cover;
 }
 
 .home_text{
     backdrop-filter: blur(16px) saturate(180%);
     -webkit-backdrop-filter: blur(16px) saturate(180%);
-    background-color: rgba(105, 152, 171, 0.75);
+    background-color: rgba(255, 199, 199, 0.75);
     border-radius: 12px;
     border: 1px solid rgba(255, 255, 255, 0.125);
     display: flex;
@@ -112,7 +120,7 @@ footer p{
 .hero a{
     backdrop-filter: blur(16px) saturate(180%);
     -webkit-backdrop-filter: blur(16px) saturate(180%);
-    background-color: rgba(105, 152, 171, 0.75);
+    background-color: rgba(255, 199, 199, 0.75);
     border-radius: 12px;
     border: 1px solid rgba(255, 255, 255, 0.125);
     text-decoration: none;
@@ -123,7 +131,7 @@ footer p{
 
 .hero a:hover{
     color: blanchedalmond;
-    background-color: #1A374D;
+    background-color: #8785A2;
     transform: scale(1.5);
 }
 
@@ -143,16 +151,13 @@ footer p{
     "bootcamp2 bootcamp2 bootcamp2 bootcamp2"
     "subscribe subscribe subscribe subscribe"
     "footer footer footer footer";
-    background-image: url(../img/mc_background.jpg);
-    background-position: center;
-    background-size: cover;
 }
 
 .bootcamp1 {
     grid-area: bootcamp1;
     backdrop-filter: blur(16px) saturate(180%);
     -webkit-backdrop-filter: blur(16px) saturate(180%);
-    background-color: rgba(105, 152, 171, 0.75);
+    background-color: rgba(255, 199, 199, 0.75);
     border-radius: 12px;
     border: 1px solid rgba(255, 255, 255, 0.125);
     margin: 2rem;
@@ -167,7 +172,7 @@ footer p{
     grid-area: bootcamp2;
     backdrop-filter: blur(16px) saturate(180%);
     -webkit-backdrop-filter: blur(16px) saturate(180%);
-    background-color: rgba(105, 152, 171, 0.75);
+    background-color: rgba(255, 199, 199, 0.75);
     border-radius: 12px;
     border: 1px solid rgba(255, 255, 255, 0.125);
     margin: 2rem;
@@ -183,7 +188,7 @@ footer p{
     display: flex;
     justify-content: space-around;
     align-items: center;
-    background-color: #406882;
+    background-color: rgba(135,133,162,0.9093838218881303);
 }
 
 .subscribe a{
@@ -229,7 +234,7 @@ footer p{
     font-size: x-large;
     backdrop-filter: blur(16px) saturate(180%);
     -webkit-backdrop-filter: blur(16px) saturate(180%);
-    background-color: rgba(17, 25, 40, 0.75);
+    background-color: rgba(255, 199, 199, 0.75);
     border-radius: 12px;
     border: 1px solid rgba(255, 255, 255, 0.125);
     display: flex;
@@ -249,6 +254,9 @@ footer p{
 .torneo_a:hover{
     color: cornsilk;
     transform: scale(1.2);
+    background-color: #8785A2;
+    border-radius: 10px;
+    padding: 0.5rem;
 }
 
 /* contactanos */
@@ -274,7 +282,7 @@ footer p{
     grid-area: contactanos_box;
     backdrop-filter: blur(16px) saturate(180%);
     -webkit-backdrop-filter: blur(16px) saturate(180%);
-    background-color: rgba(17, 25, 40, 0.75);
+    background-color: rgba(255, 199, 199, 0.75);
     border-radius: 12px;
     border: 1px solid rgba(255, 255, 255, 0.125);
     font-size: x-large;
@@ -282,7 +290,6 @@ footer p{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    margin: 0.5rem;
 }
 
 .main_contactanos{
@@ -306,9 +313,6 @@ footer p{
     "conocenos_box conocenos_box conocenos_box conocenos_box"
     "conocenos_box conocenos_box conocenos_box conocenos_box"
     "footer footer footer footer";
-    background-image: url(../img/mc_background.jpg);
-    background-position: center;
-    background-size: cover;
 }
 
 .conocenos_box {
@@ -323,12 +327,12 @@ footer p{
 .conocenos_text{
     backdrop-filter: blur(16px) saturate(180%);
     -webkit-backdrop-filter: blur(16px) saturate(180%);
-    background-color: rgba(17, 25, 40, 0.75);
+    background-color: rgba(255, 199, 199, 0.75);
     border-radius: 12px;
     border: 1px solid rgba(255, 255, 255, 0.125);
     margin: 2rem;
     padding: 2rem;
-    color: antiquewhite;
+    color: black;
     display: flex;
     flex-flow: wrap;
 }
@@ -385,11 +389,6 @@ footer p{
 
     .bootcamp1 {
         grid-area: bootcamp1;
-        backdrop-filter: blur(16px) saturate(180%);
-        -webkit-backdrop-filter: blur(16px) saturate(180%);
-        background-color: rgba(105, 152, 171, 0.75);
-        border-radius: 12px;
-        border: 1px solid rgba(255, 255, 255, 0.125);
         margin: auto;
         padding: 1rem;
         text-align: center;
@@ -400,11 +399,6 @@ footer p{
     
     .bootcamp2 {
         grid-area: bootcamp2;
-        backdrop-filter: blur(16px) saturate(180%);
-        -webkit-backdrop-filter: blur(16px) saturate(180%);
-        background-color: rgba(105, 152, 171, 0.75);
-        border-radius: 12px;
-        border: 1px solid rgba(255, 255, 255, 0.125);
         margin: auto;
         padding:1rem;
         text-align: center;
@@ -453,9 +447,6 @@ footer p{
         "conocenos_box conocenos_box conocenos_box conocenos_box"
         "conocenos_box conocenos_box conocenos_box conocenos_box"
         "footer footer footer footer";
-        background-image: url(../img/mc_background.jpg);
-        background-position: center;
-        background-size: cover;
     }
 
     .conocenos_box{
