--- a/css/estilos.css
+++ b/css/estilos.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background-image: url(/img/mc_background.jpg);
+    background-image: url(../img/mc_background.jpg);
     height: 100%;
     background-attachment: fixed;
     background-position: center;
