--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,11 @@
     font-family: 'Sora', sans-serif;
 }
 
+*::selection{
+    background-color: brown;
+    color: antiquewhite;
+}
+
 body {
     background-image: url(../img/mc_background.jpg);
     height: 100%;
@@ -14,11 +19,35 @@ body {
     background-size: cover;
 }
 
-@media only screen and (min-width: 769px){
+.cursos_btn{
+    transition: transform 0.8s;
+}
+
+.cursos_btn:hover{
+    transform: scale(1.2);
+}
+
+.anotate_btn{
+    transition: 0.8s;
+}
+
+.anotate_btn:hover{
+    transform: rotate(360deg);
+}
+
+.inscribite_btn{
+    transition: 0.8s;
+}
+
+.inscribite_btn:hover{
+    transform: scale(1.1);
+}
+
+/* @media only screen and (min-width: 769px){
     .footer_short{
         position: absolute;
         bottom: 0;
         width: 100%;
     }
-}
+} */
 
