--- a/css/estilos.css
+++ b/css/estilos.css
@@ -126,7 +126,7 @@ header nav ul li a:hover {
 
 body {
   margin: 0;
-  background-image: url(/img/mc_background.jpg);
+  background-image: url(../img/mc_background.jpg);
   height: 100%;
   background-attachment: fixed;
   background-position: center;
@@ -155,8 +155,8 @@ body {
   display: grid;
   -ms-grid-columns: 1fr 1fr 1fr 1fr;
       grid-template-columns: 1fr 1fr 1fr 1fr;
-  -ms-grid-rows: 1fr 3fr 1fr;
-      grid-template-rows: 1fr 3fr 1fr;
+  -ms-grid-rows: 1fr 4fr 1fr;
+      grid-template-rows: 1fr 4fr 1fr;
   grid-auto-columns: 1fr;
   grid-auto-rows: 1fr;
   gap: 0px 0px;
@@ -185,8 +185,8 @@ body {
   display: grid;
   -ms-grid-columns: 1fr 1fr 1fr 1fr;
       grid-template-columns: 1fr 1fr 1fr 1fr;
-  -ms-grid-rows: 1fr 3fr 1fr;
-      grid-template-rows: 1fr 3fr 1fr;
+  -ms-grid-rows: 1fr 7fr 1fr;
+      grid-template-rows: 1fr 7fr 1fr;
   grid-auto-columns: 1fr;
   grid-auto-rows: 1fr;
   gap: 0px 0px;
@@ -200,8 +200,8 @@ body {
   display: grid;
   -ms-grid-columns: 1fr 1fr 1fr 1fr;
       grid-template-columns: 1fr 1fr 1fr 1fr;
-  -ms-grid-rows: 1fr 5fr 1fr;
-      grid-template-rows: 1fr 5fr 1fr;
+  -ms-grid-rows: 1fr 4fr 1fr;
+      grid-template-rows: 1fr 4fr 1fr;
   grid-auto-columns: 1fr;
   grid-auto-rows: 1fr;
   gap: 0px 0px;
@@ -255,7 +255,7 @@ main .hero a {
   border-radius: 12px;
   border: 1px solid rgba(255, 255, 255, 0.125);
   text-decoration: none;
-  color: black;
+  color: antiquewhite;
   padding: 1rem;
   -webkit-transition: -webkit-transform 0.8s;
   transition: -webkit-transform 0.8s;
@@ -265,7 +265,7 @@ main .hero a {
 
 main .hero a:hover {
   color: antiquewhite;
-  background-color: #86a59ce5;
+  background-color: #4c5c68dc;
   -webkit-transform: scale(1.2);
           transform: scale(1.2);
 }
@@ -275,6 +275,7 @@ main .home_text {
   -webkit-backdrop-filter: blur(16px) saturate(180%);
   background-color: #24243dd8;
   border-radius: 12px;
+  color: antiquewhite;
   border: 1px solid rgba(255, 255, 255, 0.125);
   display: -webkit-box;
   display: -ms-flexbox;
@@ -365,22 +366,17 @@ main .subscribe a {
 }
 
 main .subscribe a:hover {
-  background-color: #86a59ce5;
+  background-color: #4c5c68dc;
   border-radius: 15px;
   -webkit-transform: scale(1.2);
           transform: scale(1.2);
 }
 
 main .torneo_section {
-  grid-area: torneo_section;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -ms-flex-flow: wrap;
-      flex-flow: wrap;
+  display: -ms-grid;
+  display: grid;
+  place-items: center center;
+  gap: 20px;
 }
 
 main .torneo_section .torneo_box {
@@ -389,23 +385,45 @@ main .torneo_section .torneo_box {
   backdrop-filter: blur(16px) saturate(180%);
   -webkit-backdrop-filter: blur(16px) saturate(180%);
   background-color: #24243dd8;
-  border-radius: 12px;
+  border-radius: 20px;
+  -ms-grid-columns: (minmax(300px, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   border: 1px solid rgba(255, 255, 255, 0.125);
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-shadow: 0 0 30px rgba(0, 0, 0, 0.18);
+          box-shadow: 0 0 30px rgba(0, 0, 0, 0.18);
+  display: -ms-grid;
+  display: grid;
   padding: 20px;
-  margin: 100px;
+  gap: 30px;
+}
+
+main .torneo_section .torneo_box .torneo_img_container {
+  position: relative;
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+          clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+}
+
+main .torneo_section .torneo_box .torneo_img_container img {
+  width: 100%;
+  display: block;
+  border-radius: 20px 20px 0 0;
+}
+
+main .torneo_section .torneo_box .torneo_detalles {
+  padding: 20px 10px;
+}
+
+main .torneo_section .torneo_box .torneo_detalles h3 {
+  color: #edae49;
+  font-weight: 600;
+  font-size: 18px;
+  margin: 10px 0 15 px 0;
+}
+
+main .torneo_section .torneo_box .torneo_detalles p {
+  font-size: 15px;
+  line-height: 30px;
+  font-weight: 400;
 }
 
 main .torneo_section .torneo_box .torneo_a {
@@ -421,7 +439,7 @@ main .torneo_section .torneo_box .torneo_a:hover {
   color: #24243dd8;
   -webkit-transform: scale 0.75;
           transform: scale 0.75;
-  background-color: #86a59ce5;
+  background-color: #4c5c68dc;
   border-radius: 10px;
   padding: 0.5rem;
 }
@@ -465,7 +483,7 @@ footer {
   -ms-grid-column: 1;
   -ms-grid-column-span: 4;
   grid-area: footer;
-  background: #86a59ce5;
+  background: #4c5c68dc;
 }
 
 footer .footer_redes {
@@ -601,6 +619,15 @@ footer p {
   main .conocenos_box iframe {
     height: 500px;
     width: 500px;
+  }
+  /* fix grid mobile */
+  .container_cursos {
+    -ms-grid-rows: 1fr 3fr 1fr;
+        grid-template-rows: 1fr 3fr 1fr;
+  }
+  .container_torneos {
+    -ms-grid-rows: 1fr 7fr 1fr;
+        grid-template-rows: 1fr 7fr 1fr;
   }
   .container_conocenos {
     -ms-grid-rows: 1fr 5fr 1fr;
