--- a/css/estilos.css
+++ b/css/estilos.css
@@ -293,7 +293,7 @@ main .home_text {
   text-shadow: 2px 2px gray;
 }
 
-main .bootcamp1 {
+main .bootcamp1, main .bootcamp2 {
   grid-area: bootcamp1;
   backdrop-filter: blur(16px) saturate(180%);
   -webkit-backdrop-filter: blur(16px) saturate(180%);
@@ -320,27 +320,6 @@ main .bootcamp1 {
 
 main .bootcamp2 {
   grid-area: bootcamp2;
-  backdrop-filter: blur(16px) saturate(180%);
-  -webkit-backdrop-filter: blur(16px) saturate(180%);
-  background-color: #24243dd8;
-  border-radius: 12px;
-  border: 1px solid rgba(255, 255, 255, 0.125);
-  margin: 2rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  padding: 1rem;
-  color: antiquewhite;
 }
 
 main .subscribe {
@@ -570,7 +549,7 @@ footer p {
   main .home_text {
     margin-bottom: 10rem;
   }
-  main .bootcamp1 {
+  main .bootcamp1, main .bootcamp2 {
     grid-area: bootcamp1;
     margin: auto;
     padding: 1rem;
