--- a/css/estilos.css
+++ b/css/estilos.css
@@ -233,6 +233,7 @@ main .tittle {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  padding-bottom: 3rem;
 }
 
 main .hero {
@@ -361,7 +362,6 @@ main .torneo_section {
 }
 
 main .torneo_section .torneo_box {
-  font-size: x-large;
   color: antiquewhite;
   backdrop-filter: blur(16px) saturate(180%);
   -webkit-backdrop-filter: blur(16px) saturate(180%);
@@ -409,7 +409,7 @@ main .torneo_section .torneo_box .torneo_detalles p {
 
 main .torneo_section .torneo_box .torneo_a {
   text-decoration: none;
-  color: antiquewhite;
+  color: #edae49;
   -webkit-transition: -webkit-transform 0.8s;
   transition: -webkit-transform 0.8s;
   transition: transform 0.8s;
@@ -420,7 +420,7 @@ main .torneo_section .torneo_box .torneo_a:hover {
   color: #24243dd8;
   -webkit-transform: scale 0.75;
           transform: scale 0.75;
-  background-color: #4c5c68dc;
+  background-color: #edae49;
   border-radius: 10px;
   padding: 0.5rem;
 }
@@ -601,14 +601,24 @@ footer p {
     height: 500px;
     width: 500px;
   }
+  main .torneo_section {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr;
+    -ms-grid-rows: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+    gap: 5px 5px;
+        grid-template-areas: "box1 box2 box3" "box1 box2 box3";
+  }
   /* fix grid mobile */
   .container_cursos {
     -ms-grid-rows: 1fr 3fr 1fr;
         grid-template-rows: 1fr 3fr 1fr;
   }
   .container_torneos {
-    -ms-grid-rows: 1fr 7fr 1fr;
-        grid-template-rows: 1fr 7fr 1fr;
+    -ms-grid-rows: 1fr 5fr 1fr;
+        grid-template-rows: 1fr 5fr 1fr;
   }
   .container_conocenos {
     -ms-grid-rows: 1fr 5fr 1fr;
