--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -194,6 +194,7 @@ main {
         display: flex;
         justify-content: center;
         align-items: center;
+        padding-bottom: 3rem;
     }
     /* main inicio */
     .hero {
@@ -281,7 +282,6 @@ main {
         place-items: center center;
         gap: 20px;
         .torneo_box{
-            font-size: x-large;
             color: $bg-light;
             backdrop-filter: blur(16px) saturate(180%);
             -webkit-backdrop-filter: blur(16px) saturate(180%);
@@ -318,14 +318,14 @@ main {
             }
             .torneo_a{
                 text-decoration: none;
-                color: $bg-light;
+                color: $bg-gold;
                 transition: transform 0.8s;
             }
             
             .torneo_a:hover{
                 color: $bg-dark;
                 transform: scale (.75);
-                background-color: $bg-dimdark;
+                background-color: $bg-gold;
                 border-radius: 10px;
                 padding: 0.5rem;
             }
@@ -455,13 +455,22 @@ footer {
                 width: 500px;
             }
         }
+        .torneo_section{
+            display: grid; 
+            grid-template-columns: 1fr 1fr 1fr; 
+            grid-template-rows: 1fr 1fr; 
+            gap: 5px 5px; 
+            grid-template-areas: 
+            "box1 box2 box3"
+            "box1 box2 box3";
+        }
     }
     /* fix grid mobile */
     .container_cursos{
         grid-template-rows: 1fr 3fr 1fr;
     }
     .container_torneos{
-        grid-template-rows: 1fr 7fr 1fr;
+        grid-template-rows: 1fr 5fr 1fr;
     }
     .container_conocenos{
         grid-template-rows: 1fr 5fr 1fr;
