--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -287,7 +287,7 @@ main {
             -webkit-backdrop-filter: blur(16px) saturate(180%);
             background-color: $bg-dark;
             border-radius: 20px;
-            grid-template-columns: repeat(auto-fit, minmax(300px,1fr));
+            grid-template-columns: repeat(auto-fit, minmax(200px,1fr));
             border: 1px solid rgba(255, 255, 255, 0.125);
             box-shadow: 0 0 30px rgba(0,0,0,0.18);
             display: grid;
@@ -378,6 +378,15 @@ footer {
     }
 }
 
+@media screen and (max-width: 400px){
+    main{
+        .conocenos_box{
+            margin: 0;
+            width: 100%;
+        }
+    }
+}
+
 @media screen and (min-width: 1024px){
     header{
         .nav-toggle-label{
@@ -447,12 +456,12 @@ footer {
             .conocenos_text{
                 height: 500px;
                 width: 500px;
-                text-align: center;
+                text-align: justify;
             }
         
             iframe{
-                height: 500px;
-                width: 500px;
+                height: 550px;
+                width: 550px;
             }
         }
         .torneo_section{
